# sealos-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  retry_docker_push.sh  ty.toml
src/api/: app.py  free_quota_middleware.py
src/graph/: new_project.py  sealos_ai.py
src/graph/brain/: entry.py  graph.py  project.py  resource.py  state.py
src/graph/brain/nodes/: __init__.py
src/graph/new_project/: __init__.py  graph.py  nodes.py  schemas.py  state.py
src/graph/orca/: __init__.py  append.py  deploy_project_agent.py  entry.py  graph.py  manage_project_agent.py  manage_resource_agent.py  propose_project_agent.py  state.py
src/graph/orca/edges/: tool_edge.py
src/graph/orca/nodes/: deploy_project_agent.py  manage_project_agent.py  manage_resource_agent.py  propose_project_agent.py  suggestion_agent.py
src/graph/orca/prompts/: deploy_project_prompt.py  (+3 more)
src/graph/sealos_brain/: __init__.py  graph.py  nodes.py  schemas.py  state.py
src/lib/quota/: __init__.py  free_tier.py  identity.py  quota_logging.py  resolve_credentials.py  subscription_eligibility.py  types.py
src/prompts/: new_project_prompt.py  sealos_brain_prompts.py
src/prompts/nodes/: __init__.py  compose_new_project_prompts.py  compose_project_brief_prompts.py  entry_node_prompts.py  manage_resource_prompts.py  summarize_project_prompts.py
src/provider/: backbone_provider.py
src/utils/: context_utils.py  error_utils.py  interrupt_utils.py
src/utils/brain/: compose_api_url.py
src/utils/sealos/: compose_api_url.py  extract_context.py
(+106 files in other folders)
