[project]
name = "sealos-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit>=0.1.52",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-tavily>=0.2.11",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.0",
    "langgraph-cli[inmem]>=0.3.3",
    "langsmith>=0.4.13",
    "nltk>=3.9.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.11.0",
]
